Changes in Event Page

--- a/event.html
+++ b/event.html
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="eventstyle.css" />
+    <link rel="stylesheet" href="eventstyle.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,9 +76,8 @@
       <div class="event2bar">
 
   <!--**** header area start **** -->
-<<<<<<< HEAD
-  <header class="header_area" id="header">
-    <div class="container-fluid h-100">
+
+    <!-- <div class="container-fluid h-100">
       <div class="row h-100">
         <div class="col-12 h-100">
           <nav class="h-100 navbar navbar-expand-lg">
@@ -104,91 +103,53 @@
           </nav>
         </div>
       </div>
-    </div>
-  </header>
-=======
-  
->>>>>>> f2c7ee4499d7bb19ccf1a60e3cb2eea4eee94e6a
   <!-- *** header area end *** -->
-
-      </div>
       
-      <div class="container">
+    <div class="container">
+      <div class="card-container">
+      <div class="row">
         <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="img/1.jpg" alt="Krishi Vikalp">
+          <div class="card-body">
+            <h4><strong>KRISHI-VIKALP</strong></h4>
+            <p class="card-text">It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
+          </div>
+          <button class="btn btn-primary">Know More</button>
+        </div>
 
-          <div class="card">
-            <img class="card-img-top" src="/img/img2.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Krishi Vikalp</h5>
-              <p class="card-text">Agri-Business Idea Presentation
+        <div class="card">
+          <img class="card-img-top" src="img/2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h4><strong>HACKATHON</strong></h4>
+            <p class="card-text">Develop and show your soft skills , which will be coupled with your coding skills</p>
+          </div>
+          <button class="btn btn-primary">Know More</button>
+        </div>
 
-                It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-                <a href="detail.html"><button type="button" class="btn btn-primary btn-sm">Details</button></a>
-            </div>
+        <div class="card">
+          <img class="card-img-top" src="img/3.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h4><strong>IDEATHON</strong></h4>
+            <p class="card-text">Innovation is taking two things that exist and putting them together in a new way.</p>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Hugs for bugs</h5>
-              <p class="card-text">Bugs finding skills to enhance problem solving ability. Develop and show your soft skills , which will be coupled with your coding skills</p>
-              <a href="detail.html"><button type="button" class="btn btn-primary btn-sm">Details</button></a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img3.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Agriculture</h5>
-              <p class="card-text">Innovative ideas for new and better agriculture management system. Innovation is taking two things that exist and putting them together in a new way.</p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img4.cms" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Hacks for Code</h5>
-              <p class="card-text">This will help you find out the best solutions for your algorithm. There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img5.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Ideathon</h5>
-              <p class="card-text">Agri-Business Idea Presentation
+          <button class="btn btn-primary">Know More</button>
+        </div>
 
-                It’s a wonderful opportunity to showcase your fresh innovative ideas coupled with your entrepreneurial skills</p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
+        <div class="card">
+          <img class="card-img-top" src="img/4.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h4><strong>COMPETITION</strong></h4>
+            <p class="card-text">There is only one thing stronger than all the armies of the world: and that is an idea whose time has come.</p>
           </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img7.jpeg" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Hackathon</h5>
-              <p class="card-text">The goal of a hackathon is to create functioning software or hardware by the end of the event. Develop and show your soft skills , which will be coupled with skills</p>
-             <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img6.jpeg" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Coding Competition</h5>
-              <p class="card-text">Bits, Please! Think. Code. Innovate.Value the process. Innovation is taking two things that exist and putting them together in a new way..</p>
-             <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="/img/img8.png" alt="Card image cap" height="190px">
-            <div class="card-body">
-              <h5 class="card-title">Solutions</h5>
-              <p class="card-text">This event brings problem statements to different teams from across the country, the teams are given specific problem statements for which they develop solutions. </p>
-              <button type="button" class="btn btn-primary btn-sm">Details</button>
-            </div>
-          </div>
+          <button class="btn btn-primary">Know More</button>
         </div>
       </div>
     </div>
-
-    <footer>
+    </div>
+    </div>
+      
+    <!-- <footer>
         <div class="container-fluid p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-sm-5">
@@ -227,7 +188,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
