--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 <div class="title">
                                     <h5 class="card-title">Data structures</h5>
                                 </div>
-                                <p class="card-text">
+                                <p class="card-text-index">
                                     Master concepts of data structures and algorithms.
                                 </p>
                                 <div class="pricing">
@@ -187,7 +187,7 @@
                                 <div class="title">
                                     <h5 class="card-title">Web Designing</h5>
                                 </div>
-                                <p class="card-text">
+                                <p class="card-text-index">
                                     Be a pro web developer.
                                 </p>
                                 <div class="pricing">
@@ -201,7 +201,7 @@
                                 <div class="title">
                                     <h5 class="card-title">Data Science</h5>
                                 </div>
-                                <p class="card-text">
+                                <p class="card-text-index">
                                     Be a full time data science engieer in fang company
                                 </p>
                                 <div class="pricing">
@@ -263,7 +263,7 @@
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">BTKU Dwarahat</h3>
-                            <p class="card-text">
+                            <p class="card-text-index">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
                                 veniam, illo dolor soluta assumenda
                             </p>
@@ -282,7 +282,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">ABC College</h3>
-                                        <p class="card-text">
+                                        <p class="card-text-index">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
                                             recusandae, veniam, illo dolor soluta assumenda
                                         </p>
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="card-body">
                                         <h3 class="card-title">XYZ college</h3>
-                                        <p class="card-text">
+                                        <p class="card-text-index">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem
                                             recusandae, veniam, illo dolor soluta assumenda
                                         </p>
@@ -318,7 +318,7 @@
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">WIT Dehradun</h3>
-                            <p class="card-text">
+                            <p class="card-text-index">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae,
                                 veniam, illo dolor soluta assumenda
                             </p>
