changes in contact us

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Go Hackathon</title>
+    <title>Contact Us</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
@@ -67,9 +67,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">CONTACT US</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -106,6 +106,9 @@
                     <form action="#">
                         <div class="input-box">
                             <input type="text" placeholder="Enter your name">
+                        </div>
+                        <div class="input-box">
+                            <input type="number" placeholder="Enter your phone number">
                         </div>
                         <div class="input-box">
                             <input type="text" placeholder="Enter your email">
