--- a/gallery.html
+++ b/gallery.html
@@ -35,14 +35,14 @@
 
         <a class="all Bollywood"><img src="/img/gallery3.jpg" /></a>
 
-        <a class="all Bollywood"><img src="/img/gallery4.jpg" /></a>
+        <!-- <a class="all Bollywood"><img src="/img/gallery4.jpg" /></a>
 
         <a class="all Hollywood"><img src="/img/gallery5.jpg" /></a>
 
-        <a class="all Hollywood"><img src="/img/gallery2.jpg" /></a>
+        <a class="all Hollywood"><img src="/img/gallery2.jpg" /></a> -->
 
-        <a class="all tv"><img src="/img/gallery.jpg" /></a>
-        <a class="all tv"><img src="/img/gallery2.jpg" /></a>
+        <!-- <a class="all tv"><img src="/img/gallery.jpg" /></a>
+        <a class="all tv"><img src="/img/gallery2.jpg" /></a> -->
 
       </div>
     </div>
