changes in contact us

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,9 @@
             <div class="content">
                 <div class="left-side">
                     <div class="address details">
+                        <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
                         <i class="fas fa-map-marker-alt"></i>
+                    </a>
                         <div class="topic">Address</div>
                         <div class="text-one">
                             AAG – 11, Shipra Krishna Azure
@@ -88,7 +90,7 @@
                         <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
                     </div>
                     <div class="phone details">
-                        <i class="fas fa-phone-alt"></i>
+                        <i class="fa fa-phone" style="font-size:36px"></i>
                         <div class="topic">Phone</div>
                         <div class="text-one">+91 9910018925, +91 767846713,</div>
                         <div class="text-two">+91-120-4567841</div>
