edited the footer

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-align-right text-dark"></i>
                 </button>
@@ -81,8 +81,8 @@
                 <div class="left-side">
                     <div class="address details">
                         <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
-                        <i class="fas fa-map-marker-alt"></i>
-                    </a>
+                            <i class="fas fa-map-marker-alt"></i>
+                        </a>
                         <div class="topic">Address</div>
                         <div class="text-one">
                             AAG – 11, Shipra Krishna Azure
@@ -127,12 +127,18 @@
         </div>
     </main>
     <footer>
-        <div class=" p-0">
-            <div class="row text-left">
+        <div class=" p-0 text-center">
+            <div class="row text-center">
                 <div class="col-md-5 col-sm-5">
                     <h4 class="text-light">About us</h4>
                     <p class="text-muted">Go Hackathon comprises of eminent Industry professionals, educators and
                         students meant to nurture talent among budding tech professionals.</p>
+                    <!-- <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | Terms and conditions
+                    </p> -->
+                </div>
+                <div class="col-md-5 col-sm-5">
+                    <h4 class="text-light">Quick Link</h4>
+                    <p class="text-muted"> <a href="index.html">Home</a>&nbsp;|<a href="about.html">About</a>&nbsp;|<a href="event.html">Events</a>&nbsp;|<a href="leaderboard.html">Leaderboard</a>&nbsp;|<a href="contact.html">Contact Us</a> </p>
                     <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | Terms and conditions
                     </p>
                 </div>
@@ -141,7 +147,7 @@
                     <p class="text-muted">Stay Updated</p>
                     <form class="form-inline">
                         <div class="col pl-0">
-                            <div class="input-group pr-5">
+                            <div class="input-group pr-7">
                                 <input type="text" class="form-control bg-dark text-white"
                                     id="inlineFormInputGroupUsername2" placeholder="Email">
                                 <div class="input-group-prepend">
@@ -153,7 +159,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-2 col-sm-12">
+                <div class="col-md-5 col-sm-12 ">
                     <h4 class="text-light">Follow Us</h4>
                     <p class="text-muted">Let us be social</p>
                     <div class="column text-light">
@@ -165,7 +171,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </footer>
 </body>
 
