--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mobile-style.css">
+    <!-- <link rel="stylesheet" href="contact.html"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
@@ -25,7 +26,7 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-align-right text-dark"></i>
                 </button>
@@ -144,8 +145,8 @@
             <div class=" text-center">
                 <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
                     <div class="rect">
-                      <img class="feature" src="img/feature/3.jpg" alt="">
-                
+                        <img class="feature" src="img/feature/3.jpg" alt="">
+
                     </div>
                     <div class="rect">
                         <h1>45</h1>
@@ -192,7 +193,7 @@
                                 </p>
                                 <div class="pricing">
                                     <button class="btn-3">know more</button>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -223,7 +224,7 @@
                     </p>
                 </div>
             </div> -->
-            <!-- <div class="platform row">
+        <!-- <div class="platform row">
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
@@ -247,7 +248,7 @@
                     </div>
                 </div>
             </div>
-        </section> --> 
+        </section> -->
 
         <!-- Section 4 -->
         <section class="section-4">
@@ -394,7 +395,7 @@
     </footer> -->
     <footer class="footer-section">
         <div class="container">
-            <div class="footer-cta pt-5 pb-5">
+            <!-- <div class="footer-cta pt-5 pb-5">
                 <div class="row">
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
@@ -425,16 +426,43 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="footer-content pt-5 pb-5">
+            </div> -->
+            <!-- <div class="footer-content pt-2 pd-6">
+                <div class="">
+                    <div class="address details">
+                        <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                            <i class="fa fa-map-marker"></i>
+                        </a>
+                        <div class="topic">Address</div>
+                        <div class="text-one">
+                            AAG – 11, Shipra Krishna Azure
+                        </div>
+                        <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
+                    </div>
+                    <div class="phone details">
+                        <i class="fa fa-phone"></i>
+                        <div class="topic">Phone</div>
+                        <div class="text-one">+91 9910018925, +91 767846713,</div>
+                        <div class="text-two">+91-120-4567841</div>
+                    </div>
+                    <div class="email details">
+                        <i class="fas fa-envelope"></i>
+                        <div class="topic">Email</div>
+                        <div class="text-one">info@gohackathon.in</div>
+                        <div class="text-two">gohackathon2k22@gmail.com</div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="footer-content pt-5 pb-4">
                 <div class="row">
-                    <div class="col-xl-4 col-lg-4 mb-50">
+                    <div class="col-xl-3 col-lg-3 footer-about">
                         <div class="footer-widget">
                             <div class="footer-logo">
                                 <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
-                                <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant to nurture talent among budding tech professionals. </p>
+                                <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant
+                                    to nurture talent among budding tech professionals. </p>
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
@@ -444,34 +472,71 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                        <div class="footer-widget">
-                            <div class="footer-widget-heading">
-                                <h3>Useful Links</h3>
+                    <div class="col-xl-3 col-lg-3 col-md-6 ">
+                        <div class="footer-widget-links">
+                            <div class="footer-widget">
+                                <div class="footer-widget-heading">
+                                    <h3>Useful Links</h3>
+                                </div>
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">about</a></li>
+                                    <li><a href="#">events</a></li>
+                                    <li><a href="#">Hackathon</a></li>
+                                    <li><a href="#">gallery</a></li>
+                                    <li><a href="#">Contact us</a></li>
+                                </ul>
                             </div>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">about</a></li>
-                                <li><a href="#">events</a></li>
-                                <li><a href="#">Hackathon</a></li>
-                                <li><a href="#">gallery</a></li>
-                                <li><a href="#">Contact us</a></li>
-                            </ul>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                        <div class="footer-widget">
-                            <div class="footer-widget-heading">
-                                <h3>Subscribe</h3>
+                    <div class="col-xl-3 col-lg-3 ">
+                        <div class="footer-widget-phone">
+                            <div class="footer-widget">
+                                <div class="address details">
+
+                                    <div class="topic"> <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                                            <i class="fa fa-map-marker"></i>
+                                        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address</div>
+                                    <div class="text-one">
+                                        AAG – 11, Shipra Krishna Azure
+                                    </div>
+                                    <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
+                                </div>
+                                <div class="phone details">
+
+                                    <div class="topic"> <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone
+                                    </div>
+                                    <a href="tel:+91 9910018925">+91 9910018925</a>
+                                    <a href="tel:+91 767846713">+91 767846713</a>
+                                    <a href="tel:+91-120-4567841">+91-120-4567841</a>
+                                </div>
+                                <div class="email details">
+
+                                    <div class="topic"><i
+                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
+                                    </div>
+                                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
+                                    <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
+                                </div>
                             </div>
-                            <div class="footer-text mb-25">
-                                <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
-                            </div>
-                            <div class="subscribe-form">
-                                <form action="#">
-                                    <input type="text" placeholder="Email Address">
-                                    <button><i class="fab fa-telegram-plane"></i></button>
-                                </form>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-3 col-md-6 ">
+                        <div class="footer-widget-subscribe">
+                            <div class="footer-widget">
+                                <div class="footer-widget-heading">
+                                    <h3>Subscribe</h3>
+                                </div>
+                                <div class="footer-text mb-25">
+                                    <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                                </div>
+                                <div class="subscribe-form">
+                                    <form action="#">
+                                        <input type="text" placeholder="Email Address">
+                                        <button >send</button> 
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -483,17 +548,15 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 text-center text-lg-left">
                         <div class="copyright-text">
-                            <p>Copyright © 2023 |  <a href="https://gohackathon.in/">GOHACKATHON</a> | All Right Reserved.</p>
+                            <p>Copyright © 2023 | <a href="https://gohackathon.in/">GOHACKATHON</a> | All Right
+                                Reserved.</p>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Terms</a></li>
-                                <li><a href="#">Privacy</a></li>
-                                <li><a href="#">Policy</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Terms and Conditions</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
                             </ul>
                         </div>
                     </div>
