changes in the gallery1

--- a/gallery1.html
+++ b/gallery1.html
@@ -75,7 +75,7 @@
         </div>
     </header>
     <main class="gllerymain">
-    <section class="section0">
+    <div class="section0">
         <h2 style="text-align:center ; margin-top: 10%;">College Visit</h2>
 
         <div class="container-gallery">
@@ -142,8 +142,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="section1">
+    </div>
+    <div class="section1">
         <h2 style="text-align:center ; margin-top: 10%;">Coding Competition</h2>
 
         <div class="container-gallery-2">
@@ -211,7 +211,7 @@
             </div>
         </div>
         </div>
-    </section>
+    </div>
 </main>
     <footer class="footer-section">
         <div class="container">
