--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="leaderboard.css">
+      <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -237,48 +238,177 @@
         </div>
     </div>
    
-    <footer>
-        <div class="container-fluid p-0">
-            <div class="row text-left">
-                <div class="col-md-5 col-sm-5">
-                    <h4 class="text-light">About us</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea
-                        similique illum corrupti</p>
-                    <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | Terms and conditions
-                    </p>
+    <footer class="footer-section">
+        <div class="container">
+            <!-- <div class="footer-cta pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="cta-text">
+                                <h4>Find us</h4>
+                                <span>AAG – 11, Shipra Krishna Azure <br> Kaushambi, Ghaziabad, UP – 201010</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="fas fa-phone"></i>
+                            <div class="cta-text">
+                                <h4>Call us</h4>
+                                <span>+91 9910018925,<br>+91 767846713,<br>+91-120-4567841</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-4 mb-30">
+                        <div class="single-cta">
+                            <i class="far fa-envelope-open"></i>
+                            <div class="cta-text">
+                                <h4>Mail us</h4>
+                                <span>info@gohackathon.in <br>
+                                    gohackathon2k22@gmail.com</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-5 col-sm-12">
-                    <h4 class="text-light">Subscribe</h4>
-                    <p class="text-muted">Stay Updated</p>
-                    <form class="form-inline">
-                        <div class="col pl-0">
-                            <div class="input-group pr-5">
-                                <input type="text" class="form-control bg-dark text-white"
-                                    id="inlineFormInputGroupUsername2" placeholder="Email">
-                                <div class="input-group-prepend">
-                                    <div class="input-group-text">
-                                        <i class="fas fa-arrow-right"></i>
+            </div> -->
+            <!-- <div class="footer-content pt-2 pd-6">
+                <div class="">
+                    <div class="address details">
+                        <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                            <i class="fa fa-map-marker"></i>
+                        </a>
+                        <div class="topic">Address</div>
+                        <div class="text-one">
+                            AAG – 11, Shipra Krishna Azure
+                        </div>
+                        <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
+                    </div>
+                    <div class="phone details">
+                        <i class="fa fa-phone"></i>
+                        <div class="topic">Phone</div>
+                        <div class="text-one">+91 9910018925, +91 767846713,</div>
+                        <div class="text-two">+91-120-4567841</div>
+                    </div>
+                    <div class="email details">
+                        <i class="fas fa-envelope"></i>
+                        <div class="topic">Email</div>
+                        <div class="text-one">info@gohackathon.in</div>
+                        <div class="text-two">gohackathon2k22@gmail.com</div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="footer-content pt-5 pb-4">
+                <div class="row">
+                    <div class="col-xl-3 col-lg-3 footer-about">
+                        <div class="footer-widget">
+                            <div class="footer-logo">
+                                <a href="index.html"><img src="logo.jpg" class="img-fluid" alt="logo"></a>
+                            </div>
+                            <div class="footer-text">
+                                <p>Go Hackathon comprises eminent Industry professionals, educators, and students meant
+                                    to nurture talent among budding tech professionals. </p>
+                            </div>
+                            <div class="footer-social-icon">
+                                <span>Follow us</span>
+                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6 ">
+                        <div class="footer-widget-links">
+                            <div class="footer-widget">
+                                <div class="footer-widget-heading">
+                                    <h3>Useful Links</h3>
+                                </div>
+                                <ul>
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">about</a></li>
+                                    <li><a href="#">events</a></li>
+                                    <li><a href="#">Hackathon</a></li>
+                                    <li><a href="#">gallery</a></li>
+                                    <li><a href="#">Contact us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 ">
+                        <div class="footer-widget-phone">
+                            <div class="footer-widget">
+                                <div class="address details">
+
+                                    <div class="topic"> <a href="https://goo.gl/maps/7uj6ADWiX5YEDBTCA">
+                                            <i class="fa fa-map-marker"></i>
+                                        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address</div>
+                                    <div class="text-one">
+                                        AAG – 11, Shipra Krishna Azure
                                     </div>
+                                    <div class="text-two">Kaushambi, Ghaziabad, UP – 201010</div>
+                                </div>
+                                <div class="phone details">
+
+                                    <div class="topic"> <i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Phone
+                                    </div>
+                                    <a href="tel:+91 9910018925">+91 9910018925</a>
+                                    <a href="tel:+91 767846713">+91 767846713</a>
+                                    <a href="tel:+91-120-4567841">+91-120-4567841</a>
+                                </div>
+                                <div class="email details">
+
+                                    <div class="topic"><i
+                                            class="fas fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email
+                                    </div>
+                                    <a href="mailto:info@gohackathon.in">info@gohackathon.in</a>
+                                    <a href="mailto:gohackathon2k22@gmail.com">gohackathon2k22@gmail.com</a>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
+
+                    <div class="col-xl-3 col-lg-3 col-md-6 ">
+                        <div class="footer-widget-subscribe">
+                            <div class="footer-widget">
+                                <div class="footer-widget-heading">
+                                    <h3>Subscribe</h3>
+                                </div>
+                                <div class="footer-text mb-25">
+                                    <p>Don’t miss to subscribe to our new feeds, kindly fill the form below.</p>
+                                </div>
+                                <div class="subscribe-form">
+                                    <form action="#">
+                                        <input type="text" placeholder="Email Address">
+                                        <button>send</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-2 col-sm-12">
-                    <h4 class="text-light">Follow Us</h4>
-                    <p class="text-muted">Let us be social</p>
-                    <div class="column text-light">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright © 2023 | <a href="https://gohackathon.in/">GOHACKATHON</a> | All Right
+                                Reserved.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Terms and Conditions</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    
 </body>
 <script>
     function search(){
